# etl_minicurso

./: docker-compose.yaml  init.sql  notebook.ipynb  pyproject.toml  script.py
