[tool.poetry]
name = "etl_udemy"
version = "0.1.0"
description = "Minicurso de ETL com Python"
authors = ["Natália Fonseca <nataliabf@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
