[tool.poetry]
name = "etl_udemy"
version = "0.1.0"
description = "Minicurso de ETL com Python"
authors = ["Natália Fonseca <nataliabf@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.32"
pg8000 = "^1.24.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
